fix: Settings icon overlap on very small screens

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -526,6 +526,23 @@ textarea {
     }
 }
 
+@media (max-width: 488px) {
+    .frame-header {
+        display: flex;
+        align-items: end;
+        justify-content: space-evenly;
+        font-size: 0.85rem;
+
+        #settings-cog {
+            position: unset;
+            margin-bottom: -2px;
+        }
+    }
+    .swap-status {
+        margin-top: 0;
+    }
+}
+
 .error {
     background: color.adjust(vars.$error, $alpha: -0.15);
     color: #ddd;
